@@ -18,7 +18,9 @@ RubyInspect.label=Ruby Inspect
 InspectHashKey.label=Inspect key
 ContextualRunRubyApplication.label=Run Ruby Application
 ContextualDebugRubyApplication.label=Debug Ruby Application
+
 RubyApplicationShortcut.label=Ruby Application
 
 cheatsheet.webservices.name=RDT Introduction
 cheatsheet.webservices.desc=Ruby Development Tools (RDT) Introduction
+
