@@ -8,3 +8,6 @@ TestUnitTabGroupDescription.debug=Create a configuration that will launch a Test
 TestUnitTabGroupDescription.run=Create a configuration that will launch a Test::Unit test.
 
 testRunTabs.name= Test Run Tabs
+
+TestUnitShortcut.description.run= Run Test::Unit Test
+TestUnitShortcut.description.debug= Debug Test::Unit Test
